# pdfmcr

./: Cargo.toml  README.md
jpegres/: Cargo.toml
jpegres/src/: jpegparse.rs  main.rs
pdfmcr/: Cargo.toml
pdfmcr/src/: config.rs  file_to_pdf.rs  filters.rs  main.rs  model.rs  pdf.rs
pdfmcr/templates/: _base.html  page.html  start.html
pdfpages/: Cargo.toml
pdfpages/src/: main.rs
src/: file_to_pdf.rs  image_path.rs  main.rs  model.rs  pdf.rs
src/jpeg/: exif.rs  mod.rs
static/: js
static/css/: style.css
templates/: _base.html  index.html  page.html
ts/: .gitignore  .yarnrc.yml  package.json
ts/src/: annotations.ts  badmap.ts  common.ts  main.ts  model.ts  serialize.ts  splitter.ts  svgdrag.ts  textmgmt.ts
