[package]
name = "pdfmcr"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.14", features = ["serde_json"] }
ciborium = { version = "0.2" }
clap = { version = "4.5", features = ["derive"] }
from-to-repr = { version = "0.2", features = ["from_to_other"] }
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = { version = "0.10" }
strict-num = { version = "0.2", features = ["serde"] }
tokio = { version = "1.44" }
toml = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
